added final tweaks

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <!-- Task List and Pet Display -->
 <div id="task-and-pet" style="display: none;">
   <div id="task-container">
+    <div id="date-time"></div>
+    <button id="reset-btn">Reset Onboarding</button>
     <ul id="task-list"></ul>
     <input type="text" id="task-input" placeholder="Add a new task">
     <button id="add-task-btn">Add</button>
